tests/suite/fail/generated/types/fail_div_string_i32.ny
fn main() {
    let _ = "a" / 1 //~ ERROR Type mismatch in arithmetic
}
